<resources>
    <string name="app_name">LiftBuddy</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="start_a_new_workout">Start a new workout</string>
    <string name="templates">Templates</string>
    <string name="workout">Workout</string>
    <string name="plus">+</string>
    <string name="basic_settings">Basic settings</string>
    <string name="dark_mode">Dark mode</string>
    <string name="btn_confirm">Confirm</string>
    <string name="profile_name">Your name</string>
    <string name="settings">Settings</string>
    <string name="profile">Profile</string>
    <string name="_0_workouts">0 workouts</string>
    <string name="date">Date</string>
    <string name="name">Name</string>
    <string name="exercise_library">Exercise Library</string>
    <string name="squat">Squat</string>
    <string name="deadlift">Deadlift</string>
    <string name="add">Add</string>
    <string name="pull_up">Pull Up</string>
    <string name="biceps_curl">Biceps Curl</string>
    <string name="chest_dip">Chest Dip</string>
    <string name="overhead_press">Overhead Press</string>
    <string name="bench_press">Bench Press</string>
    <string name="new_template">New Template</string>
    <string name="cancel_template">Cancel Template</string>
    <string name="add_a_new_exercise">Add a new exercise</string>
    <string name="rename">Rename</string>
    <string name="template_confirm">Confirm Template</string>
    <string name="finish_workout">Finish Workout</string>
    <string name="new_workout">New workout</string>
    <string name="cancel_workout">Cancel Workout</string>
    <string name="new_name">New name</string>
    app:title="@string/dark_mode"
    <!-- Basic Preferences -->
</resources>